--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
                 color: red;
                 background: blue;
                 line-height: 40px;
+                text-align: center;
             }
         </style>
     </head>
