--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
             .btn {
                 font-family: miui;
                 width: 100px;
-                color: red;
-                background: blue;
+                color: black;
+                background: green;
                 line-height: 40px;
                 text-align: center;
             }
