--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
                 background: green;
                 line-height: 40px;
                 text-align: center;
+                font-size: 8px;
             }
         </style>
     </head>
