--- a/test.html
+++ b/test.html
@@ -10,6 +10,8 @@
                 line-height: 40px;
                 text-align: center;
                 font-size: 8px;
+                -webkit-transform: scale(5);
+                transform: scale(5);
             }
         </style>
     </head>
