--- a/test.html
+++ b/test.html
@@ -10,8 +10,10 @@
                 line-height: 40px;
                 text-align: center;
                 font-size: 8px;
-                -webkit-transform: scale(5);
-                transform: scale(5);
+                -webkit-transform: scale(3);
+                -webkit-transform-origin: 0% 0%;
+                transform: scale(3);
+                transform-origin: 0% 0%;
             }
         </style>
     </head>
