--- a/test.html
+++ b/test.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             .btn {
                 font-family: miui;
-                width: 100px;
-                color: black;
-                background: green;
+                width: 70px;
+                color: red;
                 line-height: 20px;
                 text-align: center;
+                font-size: 14px;
+                border: 1px solid red;
+            }           
+            .btn2 {
                 font-size: 8px;
-                -webkit-transform: scale(3);
-                -webkit-transform-origin: 0% 0%;
-                transform: scale(3);
-                transform-origin: 0% 0%;
             }
         </style>
     </head>
     <body>
-        <div class="btn">这里按钮</div>
+        <div style="display: flex;">
+                <div class="btn">满减优惠</div>
+                <div class="btn btn2">满减优惠</div>
+        </div>
     </body>
 </html>
