--- a/test.html
+++ b/test.html
@@ -7,6 +7,10 @@
             margin: 20px;
             padding: 0;
         }
+        #dpr {
+            margin: 0 0 20px 0;
+            font-size: 0.5rem;
+        }
         .btn {
             width: 5rem;
             height: 1rem;
@@ -17,6 +21,7 @@
 </head>
 
 <body>
+    <div id="dpr"></div>
     <div class="btn"></div>
     <div class="btn" id="btn2"></div>
     <script>
@@ -59,6 +64,7 @@
         refreshRem();
 
         doc.getElementById('btn2').style.border = devicePixelRatio + 'px solid red';
+        doc.getElementById('dpr').innerHTML = '当前设备dpr：' + devicePixelRatio;
     </script>
 </body>
 
