--- a/test.html
+++ b/test.html
@@ -29,7 +29,8 @@
     <div id="newScale"></div>
     <div id="test2"></div>
     <div class="btn">1pp边框</div>
-    <div class="btn" id="btn2">默认下的1px边框</div>
+    <div class="btn" id="btn2">默认initial-scale下的1px边框</div>
+    <div class="btn" id="btn3">initial-scale：1.0下的1px边框</div>
     <script>
         var win = window;
         var doc = win.document;
@@ -80,6 +81,7 @@
         refreshRem();
 
         doc.getElementById('btn2').style.border = window.innerWidth / originVisualViewport + 'px solid red';
+        doc.getElementById('btn3').style.border = devicePixelRatio + 'px solid red';
         doc.getElementById('dpr').innerHTML = '当前设备dpr：' + devicePixelRatio;
     </script>
 </body>
