--- a/test.html
+++ b/test.html
@@ -54,7 +54,7 @@
         if (!metaEl) {
             metaEl = doc.createElement('meta');
             metaEl.setAttribute('name', 'viewport');
-            metaEl.setAttribute('content', 'initial-scale=' + scale + ', maximum-scale=' + scale + ', minimum-scale=' + scale + ', user-scalable=no');
+            metaEl.setAttribute('content', 'width=1300, ' + 'initial-scale=' + scale + ', maximum-scale=' + scale + ', minimum-scale=' + scale + ', user-scalable=no');
             if (docEl.firstElementChild) {
                 docEl.firstElementChild.appendChild(metaEl);
             } else {
